template changes added

--- a/FirstApp/members/templates/main.html
+++ b/FirstApp/members/templates/main.html
@@ -6,7 +6,7 @@ My Tennis Club
 
 {% block content %}
 <div class="main">
-    <h1>My Tennis Club</h1>
+    <h1>My Tennis Club@</h1>
 
     <h3>Members</h3>
 
