--- a/FirstApp/members/templates/details.html
+++ b/FirstApp/members/templates/details.html
@@ -9,5 +9,6 @@ Details about {{ mymember.firstname }} {{ mymember.lastname }}
     <h1>{{ mymember.firstname }} {{ mymember.lastname }}</h1>
     <p>Phone {{ mymember.phone }}</p>
     <p>Member since: {{ mymember.joined_date }}</p>
+    <button onclick="window.location = '/members'" class="btn btn-sm btn-primary">Back</button>
 </div>
 {% endblock %}
